--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="cover-bg p-3 p-lg-4 text-white">
     <div class="row">
       <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="https://media.licdn.com/dms/image/v2/D4D03AQHuHD94JYTZ_g/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1698717382096?e=1728518400&v=beta&t=wPv0DYcHHaJhcYbz0h73JydeJTIbsWMWLNQDcEwz5Gc" width="200" height="200"/></div>
+        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="photo_tom2.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Joilton Macedo</h2>
