feat: alterações pages pdf e png

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
   <div class="cover-bg p-3 p-lg-4 text-white">
     <div class="row">
       <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="photo_tom2.jpg" width="200" height="200"/></div>
+        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="./images/photo_ton.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Joilton Macedo</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Analista de Qualidade Jr</p>       
+        <p data-aos="fade-left" data-aos-delay="100">Analista de Qualidade Jr</p>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="./docs/Curriculo_Online.pdf" target="_blank">CV.PDF</a><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="./docs/Curriculo_Online.png" target="_blank">CV.PNG</a><a class="btn btn-success shadow-sm mt-1" href="https://w.app/contatoJoilton">Me Contate</a></div>
       </div>
     </div>
   </div>
