Fix: alterações estruturais do projeto

--- a/index.html
+++ b/index.html
@@ -155,6 +155,21 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
+          <div class="h5 mb-1">Trainne TQC <span class="text-muted h6">Qa Coders</span></div>
+          <div class="text-muted text-small mb-2">Mai, 2024 - Até o momento</div>
+          <div>Treinamento prático focado na experiência e vivências práticas em projetos propostos: Planejamento de testes;
+          Participação em reuniões de sprint como cerimônias, dally, retrospectivas, encerramentos;
+          Escrita de casos de teste e gerenciamento de testes (Azure);
+          Executar testes funcionais;
+          Abertura e acompanhamento de bugs;
+          Testes de API Rest automatizados (Postman e Robot);
+          Testes automatizados web (Robot);
+          Versionamento de código com Git e Azure DevOps;
+          Vivência com metodologia ágil.</div>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
           <div class="h5 mb-1">Auxiliar de Farmácia Hospitalar <span class="text-muted h6">Pronto Atendimento Santo Amaro de Ipitanga</span></div>
           <div class="text-muted text-small mb-2">Abr, 2020 - Abr, 2022</div>
           <div>Atuou no atendimento a pacientes com COVID-19, trabalhando como Auxiliar Administrativo de farmácia, com responsabilidades em dispensação de materiais e medicamentos, controle de estoque e validade. A paciência, a iniciativa e a empatia foram fundamentais para melhorar a saúde física e mental dos pacientes e seus familiares.</div>
@@ -166,13 +181,6 @@
             Fisioterapeuta na Atenção Primária <span class="text-muted h6">PSF Candeias-BA</span></div>
           <div class="text-muted text-small mb-2">Ago, 2017 - Out, 2018</div>
           <div>Atendeu pacientes neurológicos e ortopédicos, oferecendo ginástica laboral e preventiva. Desenvolveu um programa de orientação para prevenção de quedas e acidentes em pacientes idosos ou com dificuldades de locomoção. A escuta ativa e a empatia foram essenciais na triagem, avaliação e escolha do tratamento adequado para cada paciente.</div>
-        </div>
-      </div>
-      <div class="timeline-card timeline-card-primary card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Auxiliar de produção <span class="text-muted h6">Lear Corporation</span></div>
-          <div class="text-muted text-small mb-2">Jan, 2010 - Mai, 2011</div>
-          <div>Atuou no controle de qualidade das peças confeccionadas para bancos de automóveis, organizando materiais e peças para o setor de corte e costura e montando carrinhos para distribuição na produção. A organização, atenção e paciência foram essenciais para um desempenho eficaz na função.</div>
         </div>
       </div>
     </div>
