refactor: Reafatoração e indentação do código

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Trainne TQC <span class="text-muted h6">Qa Coders</span></div>
+          <div class="h5 mb-1">Trainee TQC <span class="text-muted h6">Qa Coders</span></div>
           <div class="text-muted text-small mb-2">Mai, 2024 - Até o momento</div>
           <div>Treinamento prático focado na experiência e vivências práticas em projetos propostos: Planejamento de testes;
           Participação em reuniões de sprint como cerimônias, dally, retrospectivas, encerramentos;
